@@ -139,6 +139,7 @@ version <next>
 - ASS and SSA demuxer and muxer
 - liba52 wrapper removed
 - Speex decoding via libspeex
+- Electronic Arts TGQ decoder
 
 version 0.4.9-pre1:
 
